Added functions to summarize dynamic websites i.e. websites which renders on client side

--- a/openai_webscraper.ipynb
+++ b/openai_webscraper.ipynb
@@ -29,9 +29,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scrape_bbc_headlines(limit=10):\n",
-    "    \"\"\"Scrape top BBC News headlines.\"\"\"\n",
-    "    url = \"https://www.bbc.com/news\"\n",
+    "def scrape_headlines(url, limit=10):\n",
+    "    \"\"\"Scrape top website headlines.\"\"\"\n",
+    "\n",
     "    html = fetch_website_contents(url)\n",
     "    \n",
     "    if not html:\n",
@@ -56,13 +56,13 @@
    "outputs": [],
    "source": [
     "def summarize_headlines_with_gpt(headlines):\n",
-    "    \"\"\"Summarize BBC headlines using OpenAI GPT.\"\"\"\n",
+    "    \"\"\"Summarize headlines using OpenAI GPT.\"\"\"\n",
     "    if not headlines:\n",
     "        return \"No headlines found to summarize.\"\n",
     "\n",
     "    system_prompt = \"You are an AI assistant that analyses content of a website\"\n",
     "    user_prompt = (\n",
-    "        \"Summarize the following BBC headlines \"\n",
+    "        \"Summarize the following headlines \"\n",
     "        \"into a short news overview:\\n\\n\"\n",
     "        + \"\\n\".join(f\"- {h}\" for h in headlines)\n",
     "    )\n",
@@ -89,30 +89,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📰 Found 10 BBC headlines:\n",
+      "📰 Found 10 headlines:\n",
       "\n",
-      "- Security camera didn't cover area where jewel thieves broke into Louvre, director says\n",
-      "- Children among victims in Russian strikes, hours after Trump-Putin talks shelved\n",
-      "- SpaceX says it has cut Starlink services to Myanmar scam camps\n",
-      "- Effects of antidepressants on physical health ranked for first time\n",
-      "- Verifying aftermath pictures of devastating Uganda bus crash\n",
-      "- Children among victims in Russian strikes, hours after Trump-Putin talks shelved\n",
-      "- Why Trump made breakthrough in Gaza but can't with Putin over Ukraine\n",
-      "- Gaza health crisis will last for generations, WHO chief tells BBC\n",
-      "- UN's top court says Israel obliged to allow UN aid into Gaza\n",
-      "- SpaceX says it has cut Starlink services to Myanmar scam camps\n",
+      "- King Charles becomes first head of Church of England to pray publicly with Pope\n",
+      "- Myanmar's army is taking back territory with relentless air strikes - and China's help\n",
+      "- Strong winds in New Zealand leave tens of thousands without power\n",
+      "- Toxic air is back again in Delhi - here's why it's so hard to stop it\n",
+      "- British man drowns in Australia after surfboard snaps in wild weather\n",
+      "- Myanmar's army is taking back territory with relentless air strikes - and China's help\n",
+      "- Trump says Putin talks 'don't go anywhere' as he imposes new sanctions\n",
+      "- Person of interest in British girl's disappearance named in Australian state parliament\n",
+      "- Gen Z rising? Why young Indians aren't taking to the streets\n",
+      "- Strong winds in New Zealand leave tens of thousands without power\n",
       "\n",
       "🧾 GPT Summary:\n",
       "\n",
-      "Recent news highlights include the following:\n",
-      "\n",
-      "The director of the Louvre revealed that security cameras did not cover the area where jewel thieves broke in. In Russia, strikes that resulted in child casualties occurred shortly after discussions between Trump and Putin were postponed. SpaceX has announced it has halted Starlink services to suspected scam operations in Myanmar. For the first time, a ranking has been established for the effects of antidepressants on physical health. Additionally, efforts are underway to verify images from a tragic bus crash in Uganda. Meanwhile, the WHO chief warned that the health crisis in Gaza will have long-lasting repercussions. The UN's highest court stated that Israel must permit UN aid into Gaza. Lastly, the complex dynamics between Trump and geopolitical issues in Gaza and Ukraine are also under examination.\n"
+      "In recent news, King Charles has made history as the first head of the Church of England to pray publicly alongside Pope Francis. Meanwhile, the Myanmar army is advancing in territorial control, aided by air strikes and support from China. In New Zealand, strong winds have left tens of thousands without power due to severe weather conditions. Delhi is grappling with toxic air pollution again, highlighting ongoing challenges in combating this issue. In Australia, a British man tragically drowned after his surfboard broke during wild weather. Additionally, former President Trump criticized his talks with Putin as unproductive while announcing new sanctions. In Australia, a person of interest has been identified in the case of a British girl's disappearance, and discussions continue regarding the socio-political engagement of young Indians, with questions about why they are not more active in protests.\n"
      ]
     }
    ],
    "source": [
-    "headlines = scrape_bbc_headlines()\n",
-    "print(f\"📰 Found {len(headlines)} BBC headlines:\\n\")\n",
+    "headlines = scrape_headlines(\"https://www.bbc.com/news\")\n",
+    "print(f\"📰 Found {len(headlines)} headlines:\\n\")\n",
     "for h in headlines:\n",
     "    print(\"-\", h)\n",
     "\n",
@@ -131,14 +129,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Headlines saved to bbc_headlines.csv\n"
+      "✅ Headlines saved to headlines.csv\n"
      ]
     }
    ],
    "source": [
     "df = pd.DataFrame({\"Headline\": headlines})\n",
-    "df.to_csv(\"bbc_headlines.csv\", index=False)\n",
-    "print(\"✅ Headlines saved to bbc_headlines.csv\")"
+    "df.to_csv(\"headlines.csv\", index=False)\n",
+    "print(\"✅ Headlines saved to headlines.csv\")"
    ]
   }
  ],
